--- a/src/Dealing.css
+++ b/src/Dealing.css
@@ -14,9 +14,10 @@
   background: 
     linear-gradient(rgba(168, 207, 230,0.50), rgba(168, 207, 230,0.90)),  
     url("../public/assets/bgimg1.jpg") center/cover no-repeat;
-  padding: 80px 20px 40px;
+  padding: 80px 3px 40px;
   color: white;
   width: 100%;
+  margin-top: -98px;
   }
   
   .dealing-top-text {
@@ -83,7 +84,7 @@
   }
 
   .top-subtitle {
-    color: #0676be; 
+    color: #035770; 
     font-size: 16px;
     font-weight: 500;
     display: block;
