--- a/src/rspsv.css
+++ b/src/rspsv.css
@@ -636,7 +636,7 @@ html, body {
     gap: 30px;
   }
 
-  .solutionimage-title {
+  .solutionimage-title-si {
     font-size: 28px;             
     line-height: 1.3;
   }
@@ -665,7 +665,7 @@ html, body {
     gap: 40px;
   }
 
-  .solutionimage-title {
+  .solutionimage-title-si {
     font-size: 32px;
     line-height: 1.4;
   }
@@ -737,7 +737,7 @@ html, body {
 }
 
 @media (max-width: 600px) {
-  .solutionimage-title {
+  .solutionimage-title-si {
     font-size: 28px;
   }
 
