set favicon and wesite title

--- a/src/Dealing.css
+++ b/src/Dealing.css
@@ -466,6 +466,7 @@
   background: white;
   color: #5b0ee6;
   border: none;
+  text-decoration: none;
   border-radius: 6px;
   cursor: pointer;
   transition: all 0.3s ease;
