--- a/src/css.css
+++ b/src/css.css
@@ -113,8 +113,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-width:  67px;
-  min-height: 67px;
+  min-width:  58px;
+  min-height: 58px;
   border: 4px solid #0998c4;
   border-radius: 50%;
   color: #0998c4;
@@ -385,8 +385,8 @@
   z-index: 9999;
   min-width: 100%;         /* minimum width for small devices */
   max-width: 90%;           /* responsive for larger screens */
-  background: #f0f0f0;
-  color: green;
+  background: white;
+  color: rgb(0, 0, 0);
   font-weight: bold;
   text-align: center;
   padding: 12px 20px;
